<resources>
    <string name="app_name">Open Weather App</string>
    <string name="open_weather_home">Open Weather Home</string>
    <string name="wednesday_march_20_2022">Wednesday, March 20, 2022</string>
    <string name="_3_30pm">3:30PM</string>
    <string name="weather_icon">weather icon</string>
    <string name="_68f">68F</string>
    <string name="ikeja_ng">Ikeja, NG</string>
    <string name="feels_cloudy">Feels Cloudy</string>
    <string name="top_cities">Top Cities</string>
    <string name="get_forecast_for_current_location">Get Forecast For Current Location</string>
<string name="daily_forecast">Daily Forecast</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise_at_6_30am">Sunrise at 6:30AM</string>
    <string name="sunset_at_7_00pm">Sunset at 7:00PM</string>
    <string name="_7_days_forecast">7 Days Forecast</string>
    <string name="wind">Wind</string>
    <string name="_301_46f">301.46F</string>
    <string name="min_temperature">Min. temperature</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="tuesday_20_november_2022">Tuesday, 20 November, 2022</string>
    <string name="_50_u2103">50℃</string>
    <string name="retry">Retry</string>
    <string name="kindly_turn_on_your_internet_and_click_the_retry_button">Kindly turn on your internet and click the retry button</string>
</resources>