<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/open_weather_home"
                    android:textColor="@color/text_black"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            style="@style/Widget.AppCompat.SearchView.ActionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_view_background"
            android:focusable="true"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_cities_tv"
            app:queryHint="Search for a top city" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_forecast_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/blue"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/get_forecast_for_current_location"
            android:textColor="@color/text_white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="4dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/get_forecast_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/get_forecast_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/my_city_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="visible"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_forecast_button">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:foreground="?attr/selectableItemBackground"
                android:padding="20dp">

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/wednesday_march_20_2022"
                    android:textColor="@color/text_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_3_30pm"
                    android:textColor="@color/text_white"
                    app:layout_constraintBottom_toBottomOf="@+id/date_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/date_tv" />

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="62dp"
                    android:layout_height="68dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/weather_icon"
                    app:layout_constraintStart_toStartOf="@+id/date_tv"
                    app:layout_constraintTop_toBottomOf="@+id/date_tv"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_68f"
                    android:textColor="@color/text_white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/city_tv"
                    app:layout_constraintStart_toEndOf="@+id/weather_image"
                    app:layout_constraintTop_toTopOf="@+id/weather_image"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/city_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ikeja_ng"
                    android:textColor="@color/text_white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/weather_image"
                    app:layout_constraintStart_toStartOf="@+id/temperature_tv"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_tv" />

                <TextView
                    android:id="@+id/feels_like_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/feels_cloudy"
                    android:textColor="@color/text_white"
                    app:layout_constraintStart_toStartOf="@+id/weather_image"
                    app:layout_constraintTop_toBottomOf="@+id/weather_image" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/top_cities_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/top_cities"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_city_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_cities_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view"
            tools:listitem="@layout/top_cities_view_holder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>