<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:paddingVertical="32dp">

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/wednesday_march_20_2022"
                    android:textAlignment="center"
                    android:textColor="@color/text_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="62dp"
                    android:layout_height="68dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/weather_icon"
                    app:layout_constraintEnd_toEndOf="@+id/date_tv"
                    app:layout_constraintStart_toStartOf="@+id/date_tv"
                    app:layout_constraintTop_toBottomOf="@+id/date_tv"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/temperature_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_68f"
                    android:textAlignment="center"
                    android:textColor="@color/text_white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/date_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/date_tv"
                    app:layout_constraintTop_toBottomOf="@+id/weather_image" />

                <TextView
                    android:id="@+id/city_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ikeja_ng"
                    android:textAlignment="center"
                    android:textColor="@color/text_white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/temperature_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/temperature_tv"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_tv" />

                <TextView
                    android:id="@+id/feels_like_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/feels_cloudy"
                    android:textAlignment="center"
                    android:textColor="@color/text_white"
                    app:layout_constraintEnd_toEndOf="@+id/city_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/city_tv"
                    app:layout_constraintTop_toBottomOf="@+id/city_tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/weather_info"
                android:textColor="@color/text_black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sunrise_at_6_30am"
                android:textAlignment="center"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sunset_at_7_00pm"
                android:textAlignment="center"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="@+id/sunrise"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/sunrise"
                app:layout_constraintTop_toBottomOf="@+id/sunrise" />

            <TextView
                android:id="@+id/core_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/core"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunset" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/core_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/core_info"
                app:spanCount="3"
                tools:itemCount="9"
                tools:listitem="@layout/weather_info_view_holder" />

            <TextView
                android:id="@+id/wind_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/wind"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/core_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wind_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wind_info"
                app:spanCount="1"
                tools:itemCount="3"
                tools:listitem="@layout/weather_info_view_holder" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>